fix(modals): z-index 2 by default on modal footers

--- a/common/assets/styles/root.scss
+++ b/common/assets/styles/root.scss
@@ -464,3 +464,7 @@ video:not([href])[controls] {
 .fr-btn--icon-right[class^="fr-icon-"]::after, .fr-btn--icon-right[class*=" fr-icon-"]::after, .fr-btn--icon-right[class^="fr-fi-"]::after, .fr-btn--icon-right[class*=" fr-fi-"]::after {
   --icon-size: 1.3rem
 }
+
+.fr-modal__footer {
+  z-index: 2;
+}
